@@ -15,10 +15,10 @@ $EM_CONF[$_EXTKEY] = [
     'createDirs' => '',
     'clearCacheOnLoad' => 0,
     'author_company' => 'jambage.com',
-    'version' => '0.4.0',
+    'version' => '0.3.5',
     'constraints' => [
         'depends' => [
-            'typo3' => '9.5.0-10.4.99',
+            'typo3' => '6.2.0-9.5.99',
         ],
         'conflicts' => [
         ],
